2003-01-08 v1.12a Tels 4109 tests (not released)
  * removed unused function _mmod from XS code
  * removed unnecc. if len == 0 check in _as_bin(), _as_hex() etc
  * replace some RETVAL = malloc() lines with defined to make changing them
    later much easier
2003-07-04 v1.12b Tels 4491 tests (not released)
  * testsuite from v1.65
  * fixed prereq to require BigInt v1.65
2003-12-11 v1.12 Tels 4677 tests
  * testsuite from v1.67, especialy revamped bigintg.t
  * fixed prereq to require BigInt v1.67
  * added _log_int() to XS code
  * some routines did only return the result, but not modify $x in place
2004-01-10 v1.13 Tels 4759 tests
  * tests from BigInt v1.68
  * removed DESTROY from GMP.pm and made GMP.xs destroy => DESTROY
  * removed _num from GMP.pm and made GMP.xs __stringify => _num
  * removed _modinv() from GMP.pm and fixed up _modinv in GMP.xs
  * disabled the borken _log_int() from the XS code
  * modify $x in place for _dec, _inc, _add, _mod, _mul, _fac, _and, _or,
    _xor, _sqrt, _root and _sub (sub in non-reversed form), this removes some
    malloc/free and makes these ops slightly faster
    (between 10 and 33% in Math::BigInt (!), depending on input and size)
2004-02-15 v1.14 Tels 4867 tests
  * require BigInt v1.70, use tests from it and make API compatible with it
  * _rsft() and _lsft() modify their argument instead of making a copy,
    meaning brsft() and blsft() got about 20% faster in BigInt
  * added a working _zeros() method
  * added a working _log_int() method
2004-11-22 v1.15 Tels 5112 tests
  * some small cleanups in the Perl code
  * changed "class" to "Class" to avoid the reserved keyword for MS compiler
  * do not pull unused parameter "Class" from stack - avoid compiler warnings
  * put _sub() into XS for more speed and smaller memory footprint
  * testsuite from MBI v1.73

Please send me test-reports, your experiences with this and your ideas - I love
to hear about my work!

Tels <http://bloodgate.com/>