@@ -2,7 +2,6 @@
 Known bugs:
 
 * Some problems with left/right shifting in base != 2 seem to occur
-* There might be some memory leaks - check the XS code!
 
 Please send me test-reports, your experiences with this and your ideas - I love
 to hear about my work!
