@@ -1,28 +1,18 @@
 
 Changes between the last and this version:
 
+v1.16:
+  * fixed a leak in _div() and simplified it (Thanx Tassilo v. Parseval)
+  * moved the _div() code to XS to make it a bit faster
+  * put leak.pl and leaktest into MANIFEST for later checking
+
+#############################################################################
+
 v1.15:
-  * some small cleanups in the Perl code
-  * changed "class" to "Class" to avoid the reserved keyword for MS compiler
-  * do not pull unused parameter "Class" from stack - avoid warnings when
-    compiling - that makes the .so a tad smaller and should make it ever so
-    slightly faster, too
-  * put _sub() into XS for more speed and smaller memory footprint
-  * testsuite from MBI v1.73
+ 221 / 444:  5 wallclock secs ( 5.20 usr +  0.01 sys =  5.21 CPU) @ 18940/s (n=98679)
+ 444 / 221:  6 wallclock secs ( 5.20 usr +  0.01 sys =  5.21 CPU) @ 19108/s (n=99555)
 
-#############################################################################
+v1.16:
+ 221 / 444:  6 wallclock secs ( 5.24 usr +  0.01 sys =  5.25 CPU) @ 20957/s (n=110026)
+ 444 / 221:  5 wallclock secs ( 5.28 usr +  0.00 sys =  5.28 CPU) @ 21231/s (n=112102)
 
-Benchmarking Math::BigInt sub (e.g. what an actual user would see):
-
-Math::BigInt v1.73, Math::BigInt::GMP v1.14:
-
- 221 - 444:  5s (5.23 usr +  0.02 sys =  5.25 CPU) @ 15603/s (n=81919)
- 444 - 221:  6s (5.21 usr +  0.02 sys =  5.23 CPU) @ 16968/s (n=88744)
-
-Math::BigInt v1.73, Math::BigInt::GMP v1.15:
-
-Benchmark: running 221 - 444, 444 - 221 for at least 5 CPU seconds...
- 221 - 444:  5s (5.25 usr +  0.02 sys =  5.27 CPU) @ 18031/s (n=95024)  +15%
- 444 - 221:  5s (5.15 usr +  0.01 sys =  5.16 CPU) @ 18080/s (n=93297)  + 6%
-
-#############################################################################
