@@ -13,19 +13,22 @@ not run its Makefile.PL or Build.PL.
 
 -----BEGIN PGP SIGNED MESSAGE-----
 
-SHA1 51d611e269430c79a8db4a7bc398194137590a77 BUGS
-SHA1 9bb0ec36c0fc2bf1663c8ae96467675351b1d313 CHANGES
+SHA1 70d6187d0152848c922dc4360fa6dd3a3dc35c62 BUGS
+SHA1 3743ce85e7e98c882bd05ec9eebcfb31ff453815 CHANGES
 SHA1 dda5ca4f413031e9efcaa1600461d5e2adaa3a40 CREDITS
-SHA1 217c2605f67abaedc94b165a49fbfa354098320f GMP.xs
+SHA1 636480140c61a18f193b0178dc9809c295d9456a GMP.xs
 SHA1 1c219a49ee07891ca39de3f89ce4bbe02549af82 INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
-SHA1 402312551dc318b81e4b019598f0a554a30ad19e MANIFEST
-SHA1 ca636deea1d19c35aab021e40df02d512d6fb706 META.yml
-SHA1 1a382f5cedc17253c2302bea4775553e051eb0ed Makefile.PL
-SHA1 2a975cdc9772832517a4a17a645f3a5f0fa26864 NEW
+SHA1 6cd50151e6eab24927bce91ec062e6d71724ce63 MANIFEST
+SHA1 9c0c8cf77b1ce503893fba602c9ea48cb1d996b9 META.yml
+SHA1 185af48c59491c5e3351c6d9950c3565de74005a Makefile.PL
+SHA1 704f02fad759cc0d99558352f5a7cfb7d8c11b1e NEW
 SHA1 e9de29b6e5e9a5e446231b5b12b644f6ed2caafc README
 SHA1 e4fd0b099ed6ef332c72cbf85719a7cf1bd2dc6a TODO
-SHA1 97cfde06ff8c19aa21584f4a26c94a350e2ffd3b lib/Math/BigInt/GMP.pm
+SHA1 fd48d0d8750eb949e485d8136b5b424fe73e9775 build/README
+SHA1 c93694211f8ba09c49ae69b5f3fd4d957bd26f62 build/leak.pl
+SHA1 ac25bda8a6eb9058a9e42a8943c3e11b9fed88dc build/leaktest
+SHA1 bed207cfb72446fcb746c8d438538b6801a181fd lib/Math/BigInt/GMP.pm
 SHA1 7704eb924e8a297edafa95c5075df502bbc2f14a t/bigfltpm.inc
 SHA1 3287807111be40445e3f8ed5cb1f738996e2b18d t/bigfltpm.t
 SHA1 b0f41f0025528cfea909c9a212c2e377ee3d9243 t/bigintg.t
@@ -35,11 +38,11 @@ SHA1 f7aad87c0a30330d474f4fb45f6d1953d6701d2f typemap
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.4 (GNU/Linux)
 
-iQEVAwUBQXlxM3cLPEOTuEwVAQHIyAf8CNz6LiY/ki8KgUJAkOE6HJtvW3Xu29LK
-nzwxNztXocGMSCrW7uTUqGnPdDLPDW7tsonWabdzav8eRnuBRRroTfjSHNfSJnvt
-hOOxWsiKaedQgjQS5xoarTlQbemxzIeibPDbx0zAFFAD7/KjfQbyfsKNIkHl+cCP
-3FZL/GIQ4LQfPf9iEDA4BUsZUOuUOHUeUIkwBma9dGVH7C3ph6Y7ydTXKT2d7Y2I
-JF5Ij1/VjI3xq+wMsT8adJTwfRTlgw3DUOoOVzPVgb/mrKYyQf0WvE32xvRe4kAR
-PI6aHHjFnzpTlfrOptquYCXgWsRGzbN2m63zkCJNYwzHPnlBZson8g==
-=SY15
+iQEVAwUBQboC9XcLPEOTuEwVAQFPLQf+Olfms17l/g4dhwcRpRLtaAm525xWEtiV
+ARQnCf/xIYfhmDR4deih71aDX6PXjRjihukU+OtPIMdE6MyHUUbzvNqGa0waPIor
+O+eOqZlZnyjJLvFGKZXJJtFF39M0ZSzmrMh9wuYvRzQhdKNXgqCju20Ni9puw6IA
+tD+V7Y0I5FkXJOCewy8NECoXnQjlcSAiWHZRsByDkJSLA6pBtoQUXuzN73D8I1P/
+JEOuQTQ0ZlF+kFs9wSShOoYYc16OS/EGcBWHw8F8jdzENErmUZ/RP7E9E4fMewey
+0MnJ9V2gRHu5Qe8oaoQs8UcaqrWOE5QG/bhW7rcXCVRL4RxNXv0iTw==
+=GgRM
 -----END PGP SIGNATURE-----
