@@ -1,0 +1,3 @@
+This directory contains scripts that are used by the developers.
+
+They are not necessarily usefull for users :)
